fix paragraph styles so they match design again

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -55,7 +55,8 @@ fieldset {
 }
 
 p {
-  font-family: $font-family-base;
+  color: $text-gray;
+  font-family: $font-family-serif;
   margin-top: 0;
   margin-bottom: $paragraph-margin-bottom;
 }
