extract accordion component from course list to reuse and create faq component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'base/grid';
 
 // components
+@import 'components/accordion';
 @import 'components/breadcrumb';
 @import 'components/button';
 @import 'components/callout-contacts';
