create schedule component

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -55,6 +55,7 @@
 
 {% block layout_content %}
 
+  {% include 'paragraphs/schedule.twig' %}
   <figure class="mb-4">
     {% include 'partials/img.twig' with { name: 'featured' } %}
   </figure>
