--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -72,6 +72,7 @@
 @import 'components/projects';
 @import 'components/publications';
 @import 'components/pullquote';
+@import 'components/schedule';
 @import 'components/search-form';
 @import 'components/search-results-item';
 @import 'components/section';
