--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -14,14 +14,14 @@
   </nav>
   <div class="site-container">
     {% include 'partials/header.twig' %}
-    <main class="main" id="midd-main">
-      <section class="page" aria-labelledby="midd-page-header-label" role="main">
+    <main class="main" id="midd-main" aria-labelledby="midd-page-header-label" role="main">
+      <div class="page">
         {% if page_header %}
           {% include 'partials/page-header.twig' with page_header %}
         {% endif %}
         {% block page %}{% endblock %}
         {% block page_footer %}{% endblock %}
-      </section>
+      </div>
     </main>
     {% include 'partials/footer.twig' %}
   </div>
