Add a navigation role attribute for the skip link and breadcrumb.

--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -9,7 +9,7 @@
 </head>
 <body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
   {% include 'partials/icons.twig' %}
-  <nav aria-labelledby="midd-skip-link">
+  <nav aria-labelledby="midd-skip-link" role="navigation">
     <a href="#midd-main" class="sr-only sr-only-focusable" id="midd-skip-link">Skip to content</a>
   </nav>
   <div class="site-container">
