--- a/src/templates/partials/breadcrumb.twig
+++ b/src/templates/partials/breadcrumb.twig
@@ -1,4 +1,4 @@
-<nav class="breadcrumb" aria-labelledby="midd-site-breadcrumb">
+<nav class="breadcrumb" aria-labelledby="midd-site-breadcrumb" role="navigation">
   <h2 id="midd-site-breadcrumb" class="sr-only">Breadcrumb</h2>
   <ol class="breadcrumb__list">
     <li class="breadcrumb__item">
