--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -8,13 +8,13 @@
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7863772/css/fonts.css" />
 </head>
 <body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
-  <nav aria-labelledby="midd-skip-link" role="navigation">
+  <nav aria-labelledby="midd-skip-link">
     <a href="#midd-main" class="sr-only sr-only-focusable" id="midd-skip-link">Skip to content</a>
   </nav>
   {% include 'partials/icons.twig' %}
   <div class="site-container">
     {% include 'partials/header.twig' %}
-    <main class="main" id="midd-main" aria-labelledby="midd-page-header-label" role="main">
+    <main class="main" id="midd-main" aria-labelledby="midd-page-header-label">
       <div class="page">
         {% if page_header %}
           {% include 'partials/page-header.twig' with page_header %}
