tweaks to schedule markup

--- a/src/scss/components/_schedule.scss
+++ b/src/scss/components/_schedule.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.schedule__title {
+.schedule__day {
   font-size: 20px;
   font-weight: $font-weight-semibold;
   font-family: $font-family-base;
@@ -62,7 +62,7 @@
   }
 }
 
-.schedule__subtitle {
+.schedule__title {
   font-size: 20px;
   font-weight: $font-weight-semibold;
   font-family: $font-family-base;
@@ -72,6 +72,8 @@
 .schedule__name {
   font-size: 18px;
   font-family: $font-family-serif;
+  font-weight: $font-weight-normal;
+  color: $black;
 }
 
 .schedule__job {
