--- a/src/templates/paragraphs/schedule.twig
+++ b/src/templates/paragraphs/schedule.twig
@@ -1,6 +1,6 @@
 <section class="schedule">
   <header class="schedule__header">
-    <h2 class="schedule__title">Day 1</h2>
+    <h2 class="schedule__day">Day 1</h2>
     <p class="schedule__description">Arrival Day</p>
   </header>
   <ol class="schedule__list">
@@ -12,10 +12,10 @@
         </div>
         <div class="schedule__body">
           {% if loop.last %}
-            <h4 class="schedule__name">Aaron Smith</h4>
+            <p class="schedule__name">Aaron Smith</p>
             <p class="schedule__job">Director of Digital Services</p>
           {% endif %}
-          <h3 class="schedule__subtitle">Some event title</h3>
+          <h3 class="schedule__title">Some event title</h3>
           <div class="typography">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta aspernatur modi reiciendis quos voluptatum obcaecati aperiam! Perferendis consequatur voluptatibus, incidunt aut, officia et autem rem rerum nobis assumenda natus cupiditate.</p>
           </div>
