--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -129,6 +129,9 @@
 
   </div>
 
+  {% include 'paragraphs/media-object.twig' %}
+
+  {% include 'paragraphs/media-object.twig' with { right: true } %}
 
   {% include 'paragraphs/faq.twig' %}
 
