add green variations to fix accessability issues on navigation menus. fixes #65

--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -38,7 +38,7 @@
   margin-right: 10px;
   position: relative;
   top: 5px;
-  color: $bright-green;
+  color: $green-light;
 }
 
 .list--unordered {
