--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -90,6 +90,6 @@
 }
 
 .page-nav__link--active {
-  color: $bright-green !important; // TODO: don't use !important
+  color: $green-dark !important; // TODO: somehow remove need for important
   font-weight: $font-weight-semibold;
 }
