--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -66,7 +66,7 @@
 // Themes
 
 .button--primary {
-  background-color: $brand-tertiary;
+  background-color: $green-light;
   color: $brand-primary;
 
   &:hover,
