--- a/src/scss/components/_callout-group-item.scss
+++ b/src/scss/components/_callout-group-item.scss
@@ -51,7 +51,7 @@
   // Can't use @extend within another mixin so we have to recreate a button
   @include media(lg) {
     border: none;
-    background-color: $bright-green;
+    background-color: $green-light;
     display: inline-block;
     font-family: $font-family-sans-serif;
     text-align: center;
