--- a/src/scss/components/_social-links.scss
+++ b/src/scss/components/_social-links.scss
@@ -11,7 +11,7 @@
 
 .social-links__link {
   display: inline-block;
-  color: $bright-green;
+  color: $green-light;
   transition: 0.2s;
 
   &:hover,
