--- a/src/scss/components/_program-panel.scss
+++ b/src/scss/components/_program-panel.scss
@@ -81,7 +81,7 @@
 }
 
 .program-panel__item--secondary {
-  background-color: $middlebury-blue;
+  background-color: $brand-primary;
 }
 
 .program-panel__stats-title {
