--- a/src/scss/components/_callout-group-item.scss
+++ b/src/scss/components/_callout-group-item.scss
@@ -66,7 +66,7 @@
     &:hover,
     &:focus {
       text-decoration: none;
-      background-color: $middlebury-blue;
+      background-color: $brand-primary;
       color: $white;
     }
   }
