--- a/src/scss/components/_google-custom-search.scss
+++ b/src/scss/components/_google-custom-search.scss
@@ -129,6 +129,6 @@ input.gsc-search-button {
 }
 
 .gsc-cursor-current-page {
-  background-color: $middlebury-blue !important;
+  background-color: $brand-primary !important;
   color: $white !important;
 }
