--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -76,7 +76,7 @@
   padding-bottom: 10px;
 
   .page-nav__list--callouts & {
-    color: $middlebury-blue;
+    color: $brand-primary;
     font-weight: $font-weight-semibold;
     padding: 0;
     display: inline;
