--- a/src/scss/components/_site-nav.scss
+++ b/src/scss/components/_site-nav.scss
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: $middlebury-blue;
+  background-color: $brand-primary;
   height: 100%;
 
   @include media(md) {
