--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,6 +8,15 @@
     font-size: 22px;
     line-height: 32px;
   }
+
+  a {
+    text-decoration: underline;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+  }
 }
 
 .typography {
