--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -55,12 +55,13 @@
 
 {% block layout_content %}
 
+  <p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
+
   {% include 'paragraphs/schedule.twig' %}
+
   <figure class="mb-4">
     {% include 'partials/img.twig' with { name: 'featured' } %}
   </figure>
-
-  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
 
   {# G1 text paragraph #}
   <div class="typography">
