--- a/src/templates/partials/mission-modal.twig
+++ b/src/templates/partials/mission-modal.twig
@@ -12,7 +12,7 @@
     <ul class="mission-modal__list">
       {% for mission in missions %}
         <li class="mission-modal__item">
-          <a href="#" class="mission-modal__link">{{mission.text | replace({'I want to': ''})}}</a>
+          <a href="{{mission.url}}" class="mission-modal__link">{{mission.text}}</a>
         </li>
       {% endfor %}
     </ul>
