The aria-labelledby attribute for the global projects section should not contain a hash.

--- a/src/templates/partials/projects.twig
+++ b/src/templates/partials/projects.twig
@@ -1,4 +1,4 @@
-<section class="projects" aria-labelledby="#midd-projects-label">
+<section class="projects" aria-labelledby="midd-projects-label">
   <div class="projects__content">
     <h2 class="projects__section-title" id="midd-projects-label">Global Projects and Partnerships</h2>
     <ul class="projects__list">
