Add an aria-labelledby attribute for the homepage hero story section.

--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -2,9 +2,9 @@
   <figure class="homepage-hero__media">
     {% include 'partials/img.twig' with { name: 'homepage_hero' } %}
   </figure>
-  <section class="homepage-hero__content">
+  <section class="homepage-hero__content" aria-labelledby="midd-homepage-hero-title">
     <div class="homepage-hero__body">
-      <h1 class="homepage-hero__title">
+      <h1 class="homepage-hero__title" id="midd-homepage-hero-title">
         <a href="#" class="homepage-hero__link">Water Sanitation Research and Development, India</a>
       </h1>
       <p class="homepage-hero__text">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
