--- a/src/templates/partials/footer-menu.twig
+++ b/src/templates/partials/footer-menu.twig
@@ -1,5 +1,7 @@
 <div class="footer-menu">
-  <h3 class="footer-menu__title">{{title}}</h3>
+  {% if title is not empty %}
+    <h3 class="footer-menu__title">{{title}}</h3>
+  {% endif %}
   <div class="footer-menu__nav">
     <ul class="footer-menu__list">
       {% for item in items %}
