add link-border class to author so it's more clearly a link

--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -17,7 +17,7 @@
         <header class="story-detail__header">
           <div class="story-detail__meta">
             <p class="story-detail__pubdate"><time datetime="2016-08-24T00:00:00-04:00">August 24, 2017</time></p>
-            <p class="story-detail__author">by <a href="#">Michael Green</a></p>
+            <p class="story-detail__author">by <a href="#" class="link-border">Michael Green</a></p>
           </div>
           <div class="story-detail__share">
             {% include 'partials/share.twig' %}
