use css columns for footer menus without titles. closes #78

--- a/src/scss/components/_footer-menu.scss
+++ b/src/scss/components/_footer-menu.scss
@@ -15,10 +15,10 @@
   margin-bottom: 20px;
 }
 
-.footer-menu__nav {
-}
-
 .footer-menu__list {
+  @include media(md) {
+    columns: 2;
+  }
 }
 
 .footer-menu__item {
