--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -168,3 +168,9 @@ $input-border-radius: $input-btn-border-radius;
 
 $input-focus-bg: $input-bg;
 $input-focus-border-color: $green-light;
+
+// lists
+
+$list-item-margin-bottom: 10px;
+$list-item-margin-bottom-md: 30px;
+$list-item-margin-bottom-lg: 60px;
