remove list around profile-teasers since they are mixed with text components. closes #76

--- a/src/scss/components/_profile-teaser.scss
+++ b/src/scss/components/_profile-teaser.scss
@@ -1,5 +1,10 @@
 .profile-teaser {
   display: flex;
+
+  // HACK: we should wrap the teasers in a list or use a modifier class
+  .profile-listing & {
+    margin-bottom: $list-item-margin-bottom-lg;
+  }
 }
 
 .profile-teaser__media {
