--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -85,11 +85,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $font-family-serif;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 1.4;
-  margin: 0;
+  font-family: $headings-font-family;
+  font-size: $headings-font-size;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  margin-top: 0;
+  margin-bottom: $headings-margin-bottom;
 }
 
 svg {
