--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -92,6 +92,12 @@ $font-weight-bold: 700;
 $font-size-base: 1rem;
 $line-height-base: 1.5;
 
+// Headings
+$headings-font-family: $font-family-serif;
+$headings-font-weight: $font-weight-semibold;
+$headings-font-size: 18px;
+$headings-line-height: 1.2;
+$headings-margin-bottom: 0;
 // Links
 $link-color: $brand-primary;
 $link-decoration: none;
