--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -55,10 +55,10 @@ fieldset {
 }
 
 p {
-  color: $text-gray;
-  font-family: $font-family-serif;
+  font-family: $font-family-base;
+  font-size: $font-size-base;
   margin-top: 0;
-  margin-bottom: $paragraph-margin-bottom;
+  margin-bottom: 0;
 }
 
 address {
