--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -98,6 +98,10 @@ $headings-font-weight: $font-weight-semibold;
 $headings-font-size: 18px;
 $headings-line-height: 1.2;
 $headings-margin-bottom: 0;
+$lead-font-size: 26px;
+$lead-line-height: 36px;
+$lead-margin-bottom: 3.5rem;
+
 // Links
 $link-color: $brand-primary;
 $link-decoration: none;
