--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -98,6 +98,29 @@ $headings-font-weight: $font-weight-semibold;
 $headings-font-size: 18px;
 $headings-line-height: 1.2;
 $headings-margin-bottom: 0;
+
+$h1-font-size: 32px;
+
+$h2-font-size: 26px;
+$h2-margin-top: 4rem;
+$h2-margin-bottom: 1.5rem;
+
+$h3-font-size: 20px;
+$h3-margin-top: 2.5rem;
+$h3-margin-bottom: 1.5rem;
+
+$h4-font-size: 18px;
+$h4-margin-top: 1.5rem;
+$h4-margin-bottom: 0;
+
+$h5-font-size: 18px;
+$h5-margin-top: 1.5rem;
+$h5-margin-bottom: 0;
+
+$h6-font-size: 17px;
+$h6-margin-top: 1rem;
+$h6-margin-bottom: 0;
+
 $lead-font-size: 26px;
 $lead-line-height: 36px;
 $lead-margin-bottom: 3.5rem;
