--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -18,15 +18,11 @@
     margin-top: 0;
   }
 
-  p {
-    font-size: 16px;
-    line-height: 28px;
-    margin-bottom: 24px;
 
-    @include media(md) {
-      font-size: 18px;
-      line-height: 30px;
-    }
+  p {
+    font-size: $paragraph-font-size;
+    line-height: $paragraph-line-height;
+    margin-bottom: $paragraph-margin-bottom;
   }
 
   a {
@@ -39,12 +35,31 @@
 
   ul,
   ol {
-    margin-bottom: 34px;
-    padding-left: 20px;
+    margin-bottom: $paragraph-margin-bottom;
+    padding-left: 1rem;
+
+    ul,
+    ol {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      padding-left: 2rem;
+    }
   }
 
   ul {
-    list-style-type: disc;
+    // list-style-type: disc;
+
+    > li {
+      position: relative;
+
+      &::before {
+        content: '\2022';
+        position: absolute;
+        left: -1rem;
+        // top: 4px;
+        font-size: 12px;
+      }
+    }
   }
 
   ol {
@@ -52,11 +67,15 @@
   }
 
   li {
-    font-family: $font-family-serif;
-    color: $gray;
+    font-size: $paragraph-font-size;
+    line-height: $paragraph-line-height;
 
     &:not(:last-of-type) {
-      margin-bottom: 18px;
+      margin-bottom: 0.5rem;
+    }
+
+    p:last-child {
+      margin-bottom: 0;
     }
   }
 
