--- a/src/scss/components/_page-header.scss
+++ b/src/scss/components/_page-header.scss
@@ -26,13 +26,11 @@
 }
 
 .page-header__title {
-  font-family: $font-family-sans-serif;
   font-weight: $font-weight-semibold;
-  font-size: 20px;
+  font-size: $h1-font-size;
   margin-bottom: 40px;
 
   @include media(md) {
-    font-size: 30px;
     margin-top: 40px;
     margin-bottom: 10px;
   }
