--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -131,6 +131,8 @@ $link-decoration: none;
 $link-hover-color: $brand-primary;
 $link-hover-decoration: underline;
 
+// captions
+$caption-font-size: 14px;
 
 // Paragraphs (in typography)
 $paragraph-font-size: 18px;
