use variables for heading margins

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -100,6 +100,8 @@ $headings-line-height: 1.2;
 $headings-margin-bottom: 0;
 
 $h1-font-size: 32px;
+$h1-margin-top: 4.5rem;
+$h1-margin-bottom: 1.5rem;
 
 $h2-font-size: 26px;
 $h2-margin-top: 4rem;
@@ -113,13 +115,13 @@ $h4-font-size: 18px;
 $h4-margin-top: 1.5rem;
 $h4-margin-bottom: 0;
 
-$h5-font-size: 18px;
+$h5-font-size: 16px;
 $h5-margin-top: 1.5rem;
-$h5-margin-bottom: 0;
+$h5-margin-bottom: 0.25rem;
 
-$h6-font-size: 17px;
-$h6-margin-top: 1rem;
-$h6-margin-bottom: 0;
+$h6-font-size: 16px;
+$h6-margin-top: 1.5rem;
+$h6-margin-bottom: 0.25rem;
 
 $lead-font-size: 26px;
 $lead-line-height: 36px;
