--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -126,42 +126,43 @@
 
   h1 {
     font-size: $h1-font-size;
-    margin-top: 4.5rem;
-    margin-bottom: 2.5rem;
+    margin-top: $h1-margin-top;
+    margin-bottom: $h1-margin-bottom;
   }
 
   h2 {
     font-size: $h2-font-size;
-    margin-top: 4rem;
-    margin-bottom: 1.5rem;
+    margin-top: $h2-margin-top;
+    margin-bottom: $h2-margin-bottom;
   }
 
   h3 {
     font-size: $h3-font-size;
-    margin-top: 2.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: $h3-margin-top;
+    margin-bottom: $h3-margin-bottom;
   }
 
   h4 {
     font-size: $h4-font-size;
-    margin-top: 1.5rem;
-    margin-bottom: 0;
+    margin-top: $h4-margin-top;
+    margin-bottom: $h4-margin-bottom;
   }
 
   h5 {
     font-size: $h5-font-size;
     font-family: $font-family-sans-serif;
-    margin-top: 1.5rem;
-    margin-bottom: 0;
+    font-weight: $font-weight-semibold;
+    margin-top: $h5-margin-top;
+    margin-bottom: $h5-margin-bottom;
   }
 
   h6 {
     font-size: $h6-font-size;
     font-family: $font-family-sans-serif;
-    margin-top: 1rem;
-    margin-bottom: 0.25rem;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: $font-weight-light;
+    margin-top: $h6-margin-top;
+    margin-bottom: $h6-margin-bottom;
   }
 }
