--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -94,7 +94,7 @@ $line-height-base: 1.5;
 
 // Headings
 $headings-font-family: $font-family-serif;
-$headings-font-weight: $font-weight-semibold;
+$headings-font-weight: $font-weight-medium;
 $headings-font-size: 18px;
 $headings-line-height: 1.2;
 $headings-margin-bottom: 0;
