create component-margin-bottom so they are consistently spaced

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@
 @import 'components/hero-form';
 @import 'components/homepage-hero';
 @import 'components/icon';
+@import 'components/image';
 @import 'components/input-group';
 @import 'components/list';
 @import 'components/media-object';
@@ -91,6 +92,7 @@
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
 @import 'components/tags';
+@import 'components/text';
 @import 'components/teaser';
 @import 'components/video';
 
