--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -208,3 +208,5 @@ $input-border-radius: $input-btn-border-radius;
 
 $input-focus-bg: $input-bg;
 $input-focus-border-color: $green-light;
+// component/D8 "Paragraphs"
+$component-margin-bottom: 3rem;
