--- a/src/templates/paragraphs/image.twig
+++ b/src/templates/paragraphs/image.twig
@@ -1,4 +1,4 @@
-<div class="mb-6">
+<div class="image">
   <figure class="media media--image">
     {% include 'partials/img.twig' with { name: 'image' } %}
     <figcaption class="media__caption">{{caption|default('captiont text here')}}</figcaption>
