move section title styles to mixin for reuse

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -25,12 +25,7 @@
 }
 
 .section__title {
-  // TODO: need to use a heading element or class e.g. .h3
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: $font-weight-semibold;
-  font-family: $font-family-sans-serif;
-  font-size: 14px;
+  @include section-title();
 }
 
 .section__link {
