--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -208,5 +208,9 @@ $input-border-radius: $input-btn-border-radius;
 
 $input-focus-bg: $input-bg;
 $input-focus-border-color: $green-light;
+
+// sections
+$section-title-margin-bottom: 2rem;
+
 // component/D8 "Paragraphs"
 $component-margin-bottom: 3rem;
