--- a/src/templates/paragraphs/text.twig
+++ b/src/templates/paragraphs/text.twig
@@ -1,4 +1,4 @@
-<div class="typography">
+<div class="text typography">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum aliquid soluta, aperiam eaque similique voluptates molestias laboriosam minus dolor, quae deleniti officia, omnis vel corporis commodi sequi. Autem nisi, reiciendis!</p>
   <p>Modi accusantium quas mollitia quasi nulla magni alias dolor perferendis tempora! Quod nostrum deleniti maiores at delectus explicabo perspiciatis quo, dolorum tempore aliquam laboriosam vero repellat unde. Officia, hic, incidunt.</p>
   <p>Iusto illo quidem enim atque expedita, molestiae distinctio quas pariatur qui corporis soluta ratione laboriosam aliquid nemo est, alias sint repudiandae magnam voluptas sunt doloremque eveniet impedit dolores tempore. Ipsa!</p>
