remove bottom margin from last child in typography
This is so the "text" component's bottom margin is used instead of whatever last element's bottom margin.

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -18,6 +18,10 @@
     margin-top: 0;
   }
 
+  // TODO: need to apply bottom margin to .typography if its in list of components or wrap it with a "text" component
+  > :last-child {
+    margin-bottom: 0;
+  }
 
   p {
     font-size: $paragraph-font-size;
