--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -20,11 +20,11 @@
       <a href="#midd-video-{{id}}" class="video__transcript-button" data-toggle-target=".js-video-transcript-{{id}}" aria-label="Toggle transcript" aria-expanded="false">
           Transcript
 
-        <svg class="video__trascript-icon icon">
+        <svg class="video__transcript-icon video__transcript-icon--close icon">
           <use xlink:href="#icon-arrow-up" />
         </svg>
 
-        <svg class="video__transcript-icon icon">
+        <svg class="video__transcript-icon video__transcript-icon--open icon">
           <use xlink:href="#icon-arrow-down" />
         </svg>
 
