use page component class instead of util

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -55,7 +55,7 @@
 
 {% block layout_content %}
 
-  <figure class="mb-4">
+  <figure class="page__image">
     {% include 'partials/img.twig' with { name: 'featured' } %}
   </figure>
 
