--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -2,16 +2,6 @@ body.has-modal {
   overflow: hidden;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
 .modal {
   display: none;
   background-color: $brand-primary;
@@ -21,7 +11,7 @@ body.has-modal {
   width: 100%;
   height: 100%;
   z-index: 20;
-  animation: fadeIn .2s;
+  animation: fadeIn 0.2s;
 
   &.is-open {
     display: block;
@@ -46,7 +36,6 @@ body.has-modal {
 }
 
 .modal__close-button {
-
 }
 
 .modal__body {
