--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'base/typography';
 @import 'base/table';
 @import 'base/grid';
+@import 'base/keyframes';
 
 // components
 @import 'components/accordion';
